src/objects/WWW__c.object
<CustomObject>
    <fields>
        <fullName>Actueel_aantal_palletplaatsen__c</fullName>
        <formula>Toename_Aantal_palletplaatsen1__c  -  Totale_afname_aantal_palletplaatsen1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actueel aantal palletplaatsen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actueel_aantal_palletplaatsenworkflow__c</fullName>
        <label>Actueel aantal palletplaatsen*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Can_be_delivered__c</fullName>
        <formula>Total_Items_Delivered_Hub__c -  Total_Items_Delivered_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can be delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Items_To_Be_Delivered_On_Hub__c</fullName>
        <formula>Total_Items_Reserved__c - Total_Items_Delivered_Hub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Huidige items die geleverd moeten worden op de Hub (gereserveerde items - aantal wat al op de hub staat)</inlineHelpText>
        <label>Curr Items To Be Delivered On Hub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Items_To_Be_Delivered_On_Project__c</fullName>
        <formula>Total_Items_Invoked__c - Total_Items_Delivered_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Items die geleverd moeten worden op de project (Opgeroepen items - Geleverd op Project)</inlineHelpText>
        <label>Curr Items To Be Delivered On Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Items_To_Invoke_Incl_Rejected__c</fullName>
        <formula>Total_Items_Delivered_Hub__c - Total_Items_Invoked__c -  Total_Items_Rejected_Hub__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Huidige items die we kunnen oproepen - Afgekeurde items op de Hub</inlineHelpText>
        <label>Curr Items To Invoke(Incl. Reject)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Curr_Items_To_Invoke__c</fullName>
        <formula>Total_Items_Delivered_Hub__c - Total_Items_Invoked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Huidige items die we kunnen oproepen (items geleverd op Hub - opgeroepen items)</inlineHelpText>
        <label>Curr Items To Invoke</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filecardnumber__c</fullName>
        <externalId>true</externalId>
        <label>Filecardnumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaUnique__c</fullName>
        <formula>Item__c + Hub_Building_Site__c + Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormulaUnique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Building_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loods/HUB</label>
        <referenceTo>Hub_Building_Site__c</referenceTo>
        <relationshipLabel>WWW</relationshipLabel>
        <relationshipName>WWW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub</label>
        <referenceTo>Hub__c</referenceTo>
        <relationshipLabel>WWW</relationshipLabel>
        <relationshipName>WWW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>WWW</relationshipLabel>
        <relationshipName>WWW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_name__c</fullName>
        <label>Item name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Items_Delivered_On_Project_Incl_Rejected__c</fullName>
        <formula>Total_Items_Delivered_Project__c - Total_Items_Rejected_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Items geleverd op project - Afgekeurde items op Project</inlineHelpText>
        <label>Items Delivered On Project(Incl. Reject)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Projecten__c</referenceTo>
        <relationshipLabel>WWW</relationshipLabel>
        <relationshipName>WWW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projectmember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aanvrager</description>
        <inlineHelpText>Dit invulveld is bedoeld om de aanvrager te benoemen.</inlineHelpText>
        <label>Aanvrager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Projectmember__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Projectmember__c</referenceTo>
        <relationshipLabel>WWW</relationshipLabel>
        <relationshipName>WWW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>SF_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WWW</relationshipLabel>
        <relationshipName>WWW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ticket_Number_ILIPS__c</fullName>
        <label>Ticketnumber Ilips</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toename_Aantal_palletplaatsen1__c</fullName>
        <label>Toename Aantal palletplaatsen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total1__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items_Delivered_Hub__c</fullName>
        <label>Total # Items Delivered Hub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items_Delivered_Project__c</fullName>
        <label>Total # Items Delivered Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items_Invoked__c</fullName>
        <label>Total # Items Invoked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items_Rejected_Hub__c</fullName>
        <label>Total # Items Rejected Hub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items_Rejected_Project__c</fullName>
        <label>Total # Items Rejected Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items_Reserved__c</fullName>
        <label>Total # Items Reserved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Totale_afname_aantal_palletplaatsen1__c</fullName>
        <label>Totale afname aantal palletplaatsen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique field</label>
        <length>54</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>WWW</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hub__c</columns>
        <columns>Item__c</columns>
        <columns>Supplier__c</columns>
        <columns>Project__c</columns>
        <columns>Projectmember__c</columns>
        <columns>Items_Delivered_On_Project_Incl_Rejected__c</columns>
        <columns>Actueel_aantal_palletplaatsen__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Overzicht_Spoorlaan</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Curr_Items_To_Invoke__c</columns>
        <columns>Projectmember__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hub__c</field>
            <operation>equals</operation>
            <value>Spoorlaan</value>
        </filters>
        <label>Overzicht Spoorlaan</label>
        <language>nl_NL</language>
    </listViews>
    <listViews>
        <fullName>Project_Rijnstraat</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Supplier__c</columns>
        <columns>Curr_Items_To_Invoke__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ticket_Number_ILIPS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>VROM Rijnstraat</value>
        </filters>
        <label>Project Rijnstraat</label>
        <language>nl_NL</language>
    </listViews>
    <nameField>
        <displayFormat>WWW-{0}</displayFormat>
        <label>WWW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WWW</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_availability_for_del_to_hub</fullName>
        <active>false</active>
        <errorConditionFormula>Curr_Items_To_Be_Delivered_On_Hub__c &lt; 0</errorConditionFormula>
        <errorMessage>Het aantal dat je aanvraagd is groter dan het beschikbare aantal items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_availbility</fullName>
        <active>false</active>
        <errorConditionFormula>Curr_Items_To_Invoke__c &lt; 0</errorConditionFormula>
        <errorMessage>Het aantal dat je aanvraagd is groter dan het beschikbare aantal items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_availbility_for_del_to_project</fullName>
        <active>false</active>
        <errorConditionFormula>Curr_Items_To_Be_Delivered_On_Project__c &lt; 0</errorConditionFormula>
        <errorMessage>Het aantal dat je aanvraagd is groter dan het beschikbare aantal items.</errorMessage>
    </validationRules>
</CustomObject>